data/derived/sp14/progs/unify/prog4650.ml.out
Characters 139-143:
  let seen' = if (List.mem h seen)=false then seen[] @ [h] in
                                              ^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
